# cuddly-eureka-os

./: .gitignore  Makefile  boot.s  os.asm  os_gnu.s
arm/: CMakeLists.txt  Makefile  print_uart.c  qemu-run.sh
arm/include/kifx/: SerialDevice.hpp
arm/include/rpi/: Peripheral.hpp  Uart0SerialDevice.hpp
arm/scripts/: qemu-run-arm.sh  qemu-run.sh
arm/src/: CMakeLists.txt
arm/src/kernel/: CMakeLists.txt  interrupt.c  kernel_main.cpp  ld_simple.x  start.s  sys.cpp  sys_asm.s
arm/src/kernel/x86/: .gitignore  CMakeLists.txt  start.asm
arm/src/kifx/: CMakeLists.txt  SerialDevice.cpp
arm/src/rpi/: CMakeLists.txt  Uart0SerialDevice.cpp
arm/toolchain/: arm-none-eabi-qemu.cmake  i386.cmake
x86/: Makefile  boot.s  run.sh
